Removed newlines and spacing from test fixtures

--- a/tests/test15/fixture/pancake/sass/pancake.scss
+++ b/tests/test15/fixture/pancake/sass/pancake.scss
@@ -1,12 +1,1 @@
-/*! PANCAKE v[version] PANCAKE-SASS v[sass-version] */
-
-/*
- * THIS FILE IS AUTOGENERATED EVERY TIME YOU INSTALL A PANCAKE MODULE.
- * DO NOT EDIT THIS FILE AND AVOID COMMITTING IT TO VERSION CONTROL.
- */
-
-@import "[path]/tests/test15/node_modules/sass-versioning/dist/_index.scss";
-
-@import "[path]/tests/test15/node_modules/@gov.au/testmodule2/lib/sass/_module.scss";
-
-@include versioning-check();
+/*! PANCAKE v1.4.1 PANCAKE-SASS v2.3.4 *//* * THIS FILE IS AUTOGENERATED EVERY TIME YOU INSTALL A PANCAKE MODULE. * DO NOT EDIT THIS FILE AND AVOID COMMITTING IT TO VERSION CONTROL. */@import "C:\\Users\\Adam\\dev\\pancake\\tests\\test15\\node_modules\\sass-versioning\\dist\\_index.scss";@import "C:\\Users\\Adam\\dev\\pancake\\tests\\test15\\node_modules\\@gov.au\\testmodule2\\lib\\sass\\_module.scss";@include versioning-check();
