--- a/tests/test8/fixture/pancake/sass/testmodule2.scss
+++ b/tests/test8/fixture/pancake/sass/testmodule2.scss
@@ -1,17 +1,1 @@
-/*! PANCAKE v[version] PANCAKE-SASS v[sass-version] */
-
-/*
- * THIS FILE IS AUTOGENERATED EVERY TIME YOU INSTALL A PANCAKE MODULE.
- * DO NOT EDIT THIS FILE AND AVOID COMMITTING IT TO VERSION CONTROL.
- */
-
-/* @gov.au/testmodule2 v13.0.0 */
-
-@import "[path]/tests/test8/node_modules/sass-versioning/dist/_index.scss";
-
-@import "[path]/tests/test8/node_modules/@gov.au/testmodule1/lib/sass/_module.scss";
-@import "[path]/tests/test8/node_modules/@gov.au/testmodule3/lib/sass/_module.scss";
-@import "[path]/tests/test8/node_modules/@gov.au/testmodule4/lib/sass/_module.scss";
-@import "[path]/tests/test8/node_modules/@gov.au/testmodule2/lib/sass/_module.scss";
-
-@include versioning-check();
+/*! PANCAKE v1.4.1 PANCAKE-SASS v2.3.4 *//* * THIS FILE IS AUTOGENERATED EVERY TIME YOU INSTALL A PANCAKE MODULE. * DO NOT EDIT THIS FILE AND AVOID COMMITTING IT TO VERSION CONTROL. *//* @gov.au/testmodule2 v13.0.0 */@import "C:\\Users\\Adam\\dev\\pancake\\tests\\test8\\node_modules\\sass-versioning\\dist\\_index.scss";@import "C:\\Users\\Adam\\dev\\pancake\\tests\\test8\\node_modules\\@gov.au\\testmodule1\\lib\\sass\\_module.scss";@import "C:\\Users\\Adam\\dev\\pancake\\tests\\test8\\node_modules\\@gov.au\\testmodule3\\lib\\sass\\_module.scss";@import "C:\\Users\\Adam\\dev\\pancake\\tests\\test8\\node_modules\\@gov.au\\testmodule4\\lib\\sass\\_module.scss";@import "C:\\Users\\Adam\\dev\\pancake\\tests\\test8\\node_modules\\@gov.au\\testmodule2\\lib\\sass\\_module.scss";@include versioning-check();
